--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -20,9 +20,9 @@
     loop: "{{ instances }}"
     register: ec2_output
 
-  - name: print the ec2_output
-    ansible.builtin.debug:
-      msg: "{{ ec2_output }}"
+  # - name: print the ec2_output
+  #   ansible.builtin.debug:
+  #     msg: "{{ ec2_output }}"
 
   - name: print public_ip
     ansible.builtin.debug: 
