--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -8,10 +8,9 @@
     domain_name: "sgrdevsecops.fun"
     instances:
     - mongodb
-    - catalogue
+    - redis
     - rabbitmq
     - mysql
-    - cart
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
