--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,24 @@
-[catalogue]
-172.31.19.141
+[mongodb]
+mongodb.sgrdevsecops.fun
+
+[redis]
+redis.sgrdevsecops.fun
+
+[mysql]
+mysql.sgrdevsecops.fun
+
+[rabbitmq]
+rabbitmq.sgrdevsecops.fun
 
 [frontend]
-172.31.26.5
+sgrdevsecops.fun
 
 [local]
 localhost
+
+[all:vars]
+ansible_user=ec2-ansible_user
+ansible_password=DevOps321
 
 [local:vars]
 NAME=from inventory
