--- a/inventory.ini
+++ b/inventory.ini
@@ -17,7 +17,7 @@ sgrdevsecops.fun
 localhost
 
 [all:vars]
-ansible_user=ec2-ansible_user
+ansible_user=ec2-user
 ansible_password=DevOps321
 
 [local:vars]
