--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -9,12 +9,12 @@
 
   - name: install rabittmq server
     ansible.builtin.package:
-      name: rabittmq-server
+      name: rabbitmq-server
       state: present
 
   - name: start and enable mysql
     ansible.builtin.service:
-      name: rabittmq-server
+      name: rabbitmq-server
       state: started
       enabled: yes
 
