--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -5,7 +5,7 @@
   - name: copy rabbitmq repo
     ansible.builtin.copy:
       src: rabbitmq.repo
-      dest: /etc/yum.repos.d/rabittmq.repo
+      dest: /etc/yum.repos.d/rabbitmq.repo
 
   - name: install rabittmq server
     ansible.builtin.package:
