--- a/inventory.ini
+++ b/inventory.ini
@@ -10,6 +10,21 @@ mysql.sgrdevsecops.fun
 [rabbitmq]
 rabbitmq.sgrdevsecops.fun
 
+[catalogue]
+catalogue.sgrdevsecops.fun
+
+[cart]
+cart.sgrdevsecops.fun
+
+[user]
+user.sgrdevsecops.fun
+
+[payment]
+payment.sgrdevsecops.fun
+
+[shipping]
+shipping.sgrdevsecops.fun
+
 [frontend]
 sgrdevsecops.fun
 
