--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -12,15 +12,14 @@
     ansible.builtin.package:
       name: nodejs
       state: present
-  
+
   - name: create roboshop system user
-    ansible.builtin.server:
+    ansible.builtin.user:
       name: roboshop
-      comment: Roboshop System user
+      comment: RoboShop System user
       system: true
       shell: /sbin/nologin
       home: /app
-
   # Safe to remove directory, because 2nd time if we run it will download freshly. no error if does not exist
   - name: remove app directory
     ansible.builtin.file:
@@ -97,3 +96,4 @@
       enabled: true
       state: started
       daemon_reload: true
+  
