--- a/frontend.yaml
+++ b/frontend.yaml
@@ -47,5 +47,5 @@
   - name: restart nginx
     ansible.builtin.service:
       name: nginx
-      state: started # restarted if you have already started earlier
+      state: restarted # restarted if you have already started earlier
       enabled: yes
